--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2> Mob Forest o melhor sistema de gerenciamento para sua loja</h2>
-                        <p>  Com o software da Mob Forest você pode ter de forma rápida e simples um sistema de gerenciamento</p>
+                        <p>  Sua loja vem enfrentando problemas de gestão de estoque? má organização?
+                             Sua loja vem enfrentando lucros baixos com frequencia?
+                             Seus problemas acabaram agora com Mob Forest</p>
 
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
