--- a/index.html
+++ b/index.html
@@ -238,8 +238,10 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2> Mob Forest o melhor sistema de gerenciamento para sua loja</h2>
-                        <p>  Sua loja vem enfrentando problemas de gestão de estoque? má organização?
-                             Sua loja vem enfrentando lucros baixos com frequencia?
+                        <p>  Sua loja vem enfrentando problemas de gestão de estoque? má organização?.
+				
+                             Sua loja vem enfrentando lucros baixos com frequencia?.
+				
                              Seus problemas acabaram agora com Mob Forest</p>
 
                     </div> <!-- end of text-container -->
